force-app/main/default/objects/Order/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Id</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>