force-app/main/default/objects/Order/fields/Shipping_Institution__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Institution__c</fullName>
    <label>Shipping Institution</label>
    <length>250</length>
    <type>Text</type>
</CustomField>