force-app/main/default/objects/Order/fields/Shipping_Track_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Track_Number__c</fullName>
    <label>Shipping Track Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>